Fix dark mode content

--- a/src/app/modules/about/about.component.scss
+++ b/src/app/modules/about/about.component.scss
@@ -1,8 +1,8 @@
 @import '../../../breakpoints.scss';
 
 :host section {
-  margin-top: 80px;
   mat-card {
+    padding-top: 80px !important;
     height: 100%;
 
     .about {
